# modo-kit-database

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml  validate.yml
data_tools/: prefs.py
kits/Pixel Fondue/: info.json
kits/Pixel Fondue/Modo Kit Central/: info.json  kit.json
queries/: insert_author.sql  insert_kit.sql  table_authors.sql  table_kits.sql
tools/: build.py  database.py  prefs.py  utils.py
