[tool.poetry]
name = "tools"
version = "0.1.0"
description = "Core modo kit database for external tools to connect to."
authors = ["Shawn Frueh <shawnfrueh@live.com>"]
license = "LICENSE"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
